--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -5,10 +5,10 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Alerty</title>
-   <link href="../lib/open-sans.css" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
    <link rel="stylesheet" href="../lib/font-awesome-6.2.1.min.css">
-   <link rel="stylesheet" href="../lib/bootstrap-5.2.0.min.css">
-   <script src="../lib/bootstrap-5.2.0.min.js"></script>
    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
